# axon

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  constants.py  main.py  proompt_eng.py  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: pylint.yml
docs/: minikube_deployment.md
inference_pod/: Dockerfile  Makefile  pyproject.toml  tmp_client.py  useful.sh
inference_pod/protos/: inference.proto
inference_pod/src/: inference_pb2_grpc.py  model_manager.py  server.py  service.py
infra/helm/templates/: deployment.yaml
infra/manifests/: minio.yaml  platform.yaml  postgres.yaml
infrastructure/helm/: Chart.yaml  values.yaml
infrastructure/helm/templates/: ingress.yaml  service.yaml
infrastructure/manifests/: data-services.yaml  platform.yaml  postgres.yaml  qdrant.yaml  secrets.yaml
llms/: llm_interface.py
maps/: exported_ark_map.map
onboard_processor/: pyproject.toml
onboard_system/: pyproject.toml
platform/: Makefile  README.md  config.py  dashboard.py  local_prompts.yaml  main.py  pyproject.toml
platform/api/: experiment.py  health_check.py  multimodal_prompt.py  prompt_format.py  text_prompt.py  waypoints.py
platform/config/: config.py
platform/db/: cache.py  db_client.py  s3.py  vector.py
platform/experiment/: example_experiment.yaml
platform/inference/: base.py  model_interface.py
platform/inference/interfaces/: anthropic_interface 2.py  cohere_interface 2.py  cohere_interface.py  local_interface.py  openai_interface 2.py
platform/kube/manifests/: data-services.yaml  minio.yaml  qdrant.yaml
platform/llm_inference/: model_interface.py
platform/llm_inference/interfaces/: anthropic_interface.py  cohere_interface.py  local_interface.py  openai_interface.py
platform/prompt/: default_prompts.yaml  local_prompts.yaml  prompt.py
platform/rag/: fill.py  waypoints_v1.py
platform/rpc/: inference_pb2.py  inference_pb2_grpc.py  local_inference.py  text_prompt.py
platform/services/: text_prompt_service.py
platform/skills/: waypoint_skills.py
prototype/: constants.py  main.py  requirements.in
prototype/llms/: hf_transformer.py  llm_interface.py
prototype/ros_node/: CMakeLists.txt  action_types.hpp  grpc_ros_bridge.cpp  grpc_ros_bridge.hpp  main.cpp  package.xml
scripts/: generate_protos.sh
src/: Makefile  config.py  constants.py  dashboard.py  local_prompts.yaml  main.py  pyproject.toml
src/api/: health_check.py  multimodal_prompt.py
src/api/v1/: experiment.py  multimodal_prompt.py  prompt_format.py  text_prompt.py  training_job.py  waypoints.py
src/db/: cache.py  db_client.py  s3.py  vector.py
src/llm_inference/: base.py  model_interface.py
src/llm_inference/interfaces/: anthropic_interface.py  cohere_interface.py  local_interface.py  openai_interface.py
src/prompt/: prompt.py
src/prompting/: prompt.py
src/prompting/rag/: fill.py  waypoints_v1.py
src/prompting/skills/: skill_spec.py
src/rag/: fill.py
src/ray_utils/: sessionManager.py
src/rpc/: inference_pb2.py  inference_pb2_grpc.py  local_inference.py
src/services/: text_prompt_service.py
src/skills/: waypoint_skills.py
src/training/: job_runner.py  utils.py
