[tool.poetry]
name = "inference-pods"
version = "0.1.0"
description = ""
authors = ["ammar siddiqui <ammar.siddiqui847@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.47.0"
grpcio = "^1.68.1"
torch = "^2.5.1"
grpcio-tools = "^1.68.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
