[tool.poetry]
name = "fydp"
version = "0.1.0"
description = "Robotic Navigation with Language Understanding - Team 7 Capstone project"
authors = ["ammar siddiqui <ammar.siddiqui847@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.0"
cohere = "^5.13.3"
fastapi = {extras = ["standard"], version = "^0.115.6"}
boto3 = "^1.35.77"
qdrant-client = "^1.12.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
