[tool.poetry]
name = "axon"
version = "0.1.0"
description = "ML platform for training, versioning, and experimenting with VLA models at scale"
authors = ["ammar siddiqui <ammar.siddiqui847@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
cohere = "^5.13.3"
fastapi = {extras = ["standard"], version = "^0.115.6"}
boto3 = "^1.35.77"
qdrant-client = "^1.12.1"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
gunicorn = "^23.0.0"
valkey = {extras = ["libvalkey"], version = "^6.0.2"}
uvicorn = "^0.34.0"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.40.0"}
wandb = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
