<!-- package.xml -->
<?xml version="1.0"?>
<package format="2">
  <name>grpc_navigation_node</name>
  <version>0.0.1</version>
  <description>ROS node for handling gRPC navigation commands</description>

  <maintainer email="">FYDP Team 7</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>

  <export>
  </export>
</package>
